k8s_specs/ingress-internal.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lnl-ingress-internal
  annotations:
    kubernetes.io/ingress.class: nginx-ingress-internal
spec:
  rules:
  - host: <host_name>
    http:
      paths:
      - backend:
          serviceName: lnl-server-service
          servicePort: 80
        path: /
